PROD/pihole_iot_deployment/pihole-iot-deployment.yaml
# --- Deployment ---
# Manages the Pods running your application container.
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique name for the deployment/
  name: pihole-iot-deployment
  namespace: pihole
  labels:
    app: pihole-iot
spec:
  replicas: 1 # Will keep at 1 as multiple instances can cause issue. SQLite does not do well with multiple instances writing to it at the same time. 
  revisionHistoryLimit: 2  # Max number of replicasets
  selector:
    # Must match the labels on the Pod template below and all other services.
    matchLabels:
      app: pihole-iot
  template:
    metadata:
      # Labels applied to the Pods created by this Deployment.  Must match spec.selector.matchLabels.
      labels:
        app: pihole-iot
    spec:
      # selector so the Pod will only run on worker nodes with multiple vlans.
      nodeSelector:
        node.kubernetes.io/microk8s-worker: microk8s-worker
      containers:
      - name: pihole-iot
        image: pihole/pihole:2026.09.0 # (updated 9/20/2026) - tested
        ports:
        - containerPort: 80 # The port the application needs to connect to an HTTP web socket.
          name: pihole-i-https # Name of the port.
        - containerPort: 53 # Port for the DNS traffic
          name: pihole-i-dns #Name of the port.
      
        # volumeMounts: Mounts the volume requested by the PVC into the container.
        volumeMounts:
        - name: pihole-iot-data # Must match the volume name defined below in spec.volumes
          # mountPath : The directory path inside the container where the storage will be accessible.
          mountPath: /etc/pihole # e.g. /app/data or /var/www/html
          # Not sure if this mount path will work but its what is defined in the container deployment.
        # --- Optional but Recommended Resources limits ---
        resources: 
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        # Adding secret for web UI password in Deployment as POD lives in MGMT subnet that default subnet does not have access to.  Unable to exec to pod.  
        # This needs to later on be move on to a proper Kubernetes encrypted secret.     
      volumes:
      - name: pihole-iot-data # defined name used in volumeMounts:
        persistentVolumeClaim: # The PVC that was declared in the PVC yaml.
          claimName: pihole-iot-pvc
