PROD/pihole_iot_deployment/pihole-iot-clusterIP.yaml
# --- ClusterIP Service ---
# Exposes the application Pods on a stable IP address *within* the cluster.
# Other applications inside the cluster can reach your app via this Service's name and port.
apiVersion: v1
kind: Service
metadata:
  # name of the service unique to the cluster:
  name: pihole-iot-clusterip-svc
  namespace: pihole
  labels:
    app: pihole-iot
spec:
  # type: ClusterIP is the default, but explicitly stating is clearer.
  type: ClusterIP
  # selector: match label so cluster knows what deployment it belongs to.
  selector:
    app: pihole-iot
  ports:
    # Few ports to add so the pihole cluster can recieve all the needed traffic for DNS services.
      # TCP and UDP ports for DNS traffic to the pods/container.
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
      # The external port to connect to the web insterface via a browser.
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
